# multilingual-nlp-homeworks

./: .gitignore  README.md  pyproject.toml  requirements.txt
MNLP2025_Cultural_Classifier/data/: rule_predictions.csv
homework1/: lm_approach.ipynb  non_lm_approach.ipynb
homework1/nonLM_approach/: README.md  analyze_test_results.py  analyze_validation_results.py  apply_fallback_test.py  apply_fallback_validation.py  requirements.txt  run_RBC_validation.py
homework1/nonLM_approach/data/: golden_culture_qids.csv  test_unlabeled.csv  train_enriched.csv  validation_enriched_with_labels.csv
homework1/nonLM_approach/data/data/: golden_heritage_qids.csv  golden_instance_qids.csv  test_enriched.csv  train_enriched_labeled.csv
homework1/nonLM_approach/results/: hybrid_test_final_predicts.csv
homework1/nonLM_approach/results/results/: test_rules.csv  validation_fallback.csv  validation_rules.csv
homework1/nonLM_approach/scripts/: wikidata_enrichment.py
homework1/nonLM_approach/scripts/scripts/: constants.py
homework1/non_lm_approach/: README.md  diagnostics.py  main.py  requirements.txt  rule_predictions.csv
homework1/non_lm_approach/data/: validation_enriched.csv  validation_prepared.csv
homework1/non_lm_approach/diagnostics/: frequent_instance_qids.py
homework1/non_lm_approach/scripts/: constants.py  wikidata_enrichment.py
src/mnlp/homework1/: lm_approach.ipynb
src/mnlp/utils/: constants.py
