[project]
name = "multilingual-nlp-homeworks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "gitpython>=3.1.44",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sparqlwrapper>=2.0.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.ruff]
indent-width = 4
